update openssl version in waf Dockerfile
Signed-off-by: Patrick Münch <patrick.muench1111@gmail.com>

--- a/waf/Dockerfile
+++ b/waf/Dockerfile
@@ -37,7 +37,7 @@ ENV BUILD_PATH /opt
 ENV PROXY_REDIRECT_IP 12.12.12.12
 ENV NGINX_VERSION 1.9.12
 ENV NAXSI_VERSION master
-ENV OPENSSL_VERSION 1.0.2g
+ENV OPENSSL_VERSION 1.0.2h
 ENV PCRE_VERSION 8.38
 ENV CLEAR_HEADER_VERSION 0.29
 
